--- a/Front/package.json
+++ b/Front/package.json
@@ -15,6 +15,8 @@
     "react-firebase-hooks": "^5.0.3",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.4.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -40,5 +42,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "proxy": "http://localhost:5000"
 }
