--- a/package.json
+++ b/package.json
@@ -12,12 +12,17 @@
   "author": "Diana Rodriguez",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.1.3",
     "concurrently": "^7.4.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongoose": "^6.6.5",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "react-redux": "^8.0.4",
+    "redux": "^4.2.0",
+    "redux-thunk": "^2.4.1",
+    "thunk": "^0.0.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
